src/test/deca/syntax/valid/SansObjet/ListDeclVar-2DeclVar-Init.deca
// Description:
//    Declaration of two variables with initialization.
//
// Results:
//    (void)
//
// Historique:
//    cree le 01/01/2022

{
        int x = 3, y = 2;
}
